# happybanfirst_v2.0

./: .gitignore  README.md  app.py  install.sh  new_payment.xlsx  new_payment_v2.xlsx  new_payments_v2.xlsx  orness-api.py  pyproject.toml  readme.md  settings.ini  setup.py  swagger.yaml
flask/: app.py
flask/static/: style.css
flask/templates/: create_external.html  home.html  login.html  submit_payment.html
ibanvenv/ibandir/orness/: __init__.py  config.py  header_generator.py  jsonvalidator.py  orness_api.py  requirements.txt
log/: logging.yaml
myflask/: app.py
myflask/static/: bulma.min.css  style.css
myflask/templates/: base.html  choice.html  history.html  home.html  login.html  payment_response.html  recip.html  submit_payment.html
orness/: .env  DockerFile  __init__.py  __main__.py  auth.py  bind.py  cache.py  config.py  error_exception.py  header_generator.py  ibandir.code-workspace  mapping.py  mappings.py  ornessSDK.py  orness_api.py  requirements.txt  utils.py
orness/file/: create_beneficiary_schema.json  payment_validator_schema.json  submit_payment.json  submit_payment_schema.json  submit_wallet_schema.json  toto.json  wallet-schema.json  walletid.json  wallets.json
test/: test_external_bank_account.py  test_payments_api.py  test_wallets_api.py
